--- a/css/interactions.css
+++ b/css/interactions.css
@@ -3,7 +3,7 @@
     font-family:  'horizon', Helvetica, sans-serif;
     padding:0;
     margin:0;
-    font-size: 3rem;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
