--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body{
   font-family:  'horizon', Helvetica, sans-serif;
   padding:0;
   margin:0;
-  font-size: 3rem;
+  font-size: 1.5rem;
   text-decoration: none;
 }
 
@@ -85,3 +85,6 @@ border-radius: 6px;
 border-radius: 6px;
 }
 
+.footer .text-link{
+  font-size:1rem;
+}
